# nakamon

./: README.md  pyproject.toml
data/: nakamon_status.csv  orange_skill.csv  resistance_skill.csv
docs/: tutorial.ipynb
nakamon/: damage.py  nakamon.py
