[tool.poetry]
name = "nakamon"
version = "0.1.0"
description = ""
authors = ["driller <eleshis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
lxml = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
